--- a/backend/reactdjango/static/developer.css
+++ b/backend/reactdjango/static/developer.css
@@ -3,6 +3,7 @@
     margin: 0;
 }
 
+
 .header{
     background-color: rgb(7, 4, 19);
     width: 100%;
@@ -41,7 +42,16 @@
     color: white;
     
 }
-.link-container ul li:active{
+
+.link-container ul li:hover {
+    background-color: white; /* Background color on hover and when link is active */
+    color: black; /* Text color on hover and when link is active */
+}
+ /* li:hover{
     background-color: white;
     color: black;
 }
+.link-container ul li:active a{
+    background-color: white;
+    color: black;
+} */
