--- a/backend/reactdjango/templates/developerpage.html
+++ b/backend/reactdjango/templates/developerpage.html
@@ -15,20 +15,23 @@
                 <h2>JEFF</h2>
             </div>
             <div class="greet">
-                <h5>welcome {{developer.name}}</h5>
+                <h4>welcome {{developer.name}}</h4>
             </div>
         </div>
         <div class="link-container">
             <ul>
-                <li><a href="">Profile</a></li>
+                <li><a href="/developer-profile">Profile</a></li>
                 <li><a href="">Houses</a></li>
-                <li><a href="">Post</a></li>
+                <li><a href="">Post house</a></li>
+                <li><a href="">Sell property</a></li>
             </ul>
         </div>
+
+       
         
-        {% block content%}    
-        {% endblock%}
-        
-    </div>
+    
+    {% block content%}    
+    {% endblock%}
+</div>
 </body>
 </html>
