--- a/backend/reactdjango/templates/developerpage.html
+++ b/backend/reactdjango/templates/developerpage.html
@@ -22,8 +22,8 @@
             <ul>
                 <li><a href="/developer-profile">Profile</a></li>
                 <li><a href="">Houses</a></li>
-                <li><a href="">Post house</a></li>
-                <li><a href="">Sell property</a></li>
+                <li><a href="/post_rentals">Post house</a></li>
+                <li><a href="/sell_property">Sell property</a></li>
             </ul>
         </div>
 
