--- a/backend/reactdjango/templates/homepage.html
+++ b/backend/reactdjango/templates/homepage.html
@@ -12,10 +12,10 @@
     <div class="main-container">
         <div class="content">
             <div class="developer">
-                <a href="/login">Post House</a>
+                <a href="/login">Post Property</a>
             </div>
             <div class="tenant">
-                <a href="">Search House</a>
+                <a href="/view_property">Search Property</a>
             </div>
         </div>
         
