--- a/backend/reactdjango/static/rentals.css
+++ b/backend/reactdjango/static/rentals.css
@@ -9,6 +9,7 @@ body{
     width: 95%;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 53px;
 }
 .search-container{
     background-color: white;
@@ -68,10 +69,14 @@ form{
 
 .houses-container{
     background-color: white;
-    width: 20%;
+    width: 24%;
     display: inline-block;
+    border-top-left-radius: 5px; /* Adjust the radius value as needed */
+    border-top-right-radius: 5px;
+    margin-bottom: 5px;
+    margin-right: 5px;
     border: 1px solid black;
-    height: 300px;
+   
 }
 .photo img{
     width: 100%;
@@ -81,7 +86,17 @@ form{
 .details{
     display: flex;
     flex-direction: column;
-    width: 80%;
+    width: 100%;
+    text-align: center;
     margin-left: auto;
     margin-right: auto;
+}
+.cost{
+    width: 100%;
+    color: white;
+    border: none;
+    background-color: rgb(38, 216, 38);
+    height: 30px;
+    text-align: center;
+    font-weight: bold;
 }
