--- a/backend/reactdjango/static/rentals.css
+++ b/backend/reactdjango/static/rentals.css
@@ -19,6 +19,7 @@ body{
     margin-bottom: 10px;
     margin-top: 10px;
     display: inline-block;
+    border-radius: 3px;
 }
 .adverts{
     background-color: rgb(11, 10, 27);
@@ -28,6 +29,7 @@ body{
     vertical-align: top;
     width: 35%;
     font-size: 17px;
+    border-radius: 3px;
 }
 p{
     margin: 5px;
@@ -37,6 +39,10 @@ p{
     display: flex;
     justify-content: space-around;
 }
+.min-rent , .max-rent{
+    display: inline-block;
+    width: 30%;
+}
 input{
     display: block;
     width: 60%;
@@ -45,6 +51,7 @@ input{
     margin-bottom: 10px;
 }
 label{
+    display: block;
     font-weight: bold;
     font-size: 18px;
 }
@@ -78,10 +85,10 @@ form{
     border: 1px solid black;
    
 }
-.photo img{
+.photo {
     width: 100%;
-    margin-left: auto;
-    margin-right: auto;
+    height: 200px;
+    overflow: hidden;
 }
 .details{
     display: flex;
