--- a/backend/reactdjango/static/searchrental.css
+++ b/backend/reactdjango/static/searchrental.css
@@ -16,6 +16,12 @@
     border: 1px solid black;
    
 }
+.photo {
+    width: 100%;
+    height: 200px;
+    overflow: hidden;
+}
+
 .details{
     display: flex;
     flex-direction: column;
@@ -23,6 +29,9 @@
     text-align: center;
     margin-left: auto;
     margin-right: auto;
+}
+p{
+    margin: 5px;
 }
 .cost{
     width: 100%;
