--- a/backend/reactdjango/static/buyproperty.css
+++ b/backend/reactdjango/static/buyproperty.css
@@ -1,14 +1,7 @@
-*{
-   padding: 0;
-   margin: 0;
-}
-body{
-    background-color: rgb(235, 225, 225);
+.buy-property{
+    display: none;
 }
 
-.rent-property{
-   display: none; 
-}
 .main-container{
     width: 95%;
     margin-left: auto;
@@ -18,11 +11,13 @@ body{
 
 .main-container a{
     color: black;
+    text-decoration: none;
 }
 
 .search-container{
+    display: inline-block;
     background-color: white;
-    width: 60%;
+    width: 50%;
     height: auto;
     /* box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.5); */
     margin-bottom: 10px;
@@ -35,34 +30,15 @@ body{
                  /* -5px 0 5px rgba(0, 0, 0, 0.5), Left side  left*/
 }
 
-.adverts{
-    background-color: rgb(11, 10, 27);
-    color: white;
-    display: inline-block;
-    margin-left: 10px;
-    margin-top: 10px;
-    vertical-align: top;
-    width: 35%;
-    font-size: 17px;
-    border-radius: 3px;
-}
-p{
-    margin: 5px;
-}
-.social-icons{
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-}
-
 .size , .location{
     display: inline-block;
-    width: 30%;
+    width: 40%;
 }
 .size input , .location input{
     width: 100%;
 }
-.min-rent , .max-rent{
+
+.min-Price , .max-Price{
     display: inline-block;
     width: 30%;
 }
@@ -97,11 +73,24 @@ form{
     
 }
 
+.adverts{
+    background-color: rgb(11, 10, 27);
+    color: white;
+    display: inline-block;
+    margin-left: 10px;
+    margin-top: 10px;
+    vertical-align: top;
+    width: 46%;
+    font-size: 17px;
+    border-radius: 3px;
+}
 
-.houses-container{
+p{
+    margin: 5px;
+}
+.property-container{
     background-color: white;
     width: 24%;
-    display: inline-block;
     border-top-left-radius: 5px; /* Adjust the radius value as needed */
     border-top-right-radius: 5px;
     margin-bottom: 5px;
@@ -110,20 +99,20 @@ form{
     vertical-align: top;
    
 }
-.photo {
+.photo-container {
     width: 100%;
     height: 200px;
     overflow: hidden;
     position: relative;
 }
 
-.photo img{
+.photo-container img{
     max-width: 100%;
-    max-heiyght: 100%;
+    max-heidght: 100%;
     object-fit: cover;
 }
 
-.details{
+.property-details{
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -131,7 +120,7 @@ form{
     margin-left: auto;
     margin-right: auto;
 }
-.cost{
+.property-cost{
     width: 100%;
     color: white;
     border: none;
@@ -139,44 +128,4 @@ form{
     height: 30px;
     text-align: center;
     font-weight: bold;
-}
-@media (max-width: 768px) {
-    .main-container{
-        width: 100%;
-    }
-    .search-container{
-        width: 100%;
-        margin-top: 5px;
-    }
-    .adverts{
-        display: none;
-        width: 100%;
-        margin-bottom: 5px;
-    }
-    .houses-container{
-        width: 47%;
-        margin-left: 5px;
-        margin-right: 0;
-        height: 300px;
-    }
-    .photo {
-        height: 200px;
-    }
-    .size , .location{
-       
-        width: 47%;
-    }
-    .min-rent , .max-rent{
-        width: 45%;
-    }
-    input{
-        width: 70%;
-    }
-    form{
-
-        width: 95%;
-    }
-    p{
-        margin: 2px;
-    }
 }
