--- a/backend/reactdjango/templates/buyproperty.html
+++ b/backend/reactdjango/templates/buyproperty.html
@@ -20,7 +20,13 @@
                     <div class="size">
                         <label for="Size">Property type</label>
                         <span>filter by type</span>
-                        <input type="search" name="Size" placeholder="1 bedroom"  > 
+                        <select name="Size" id="size-filter">
+                            <option value="">Select Size</option>
+                            <option value="Rentals">Rentals</option>
+                            <option value="Land">Land</option>
+                            <option value="House">House</option>
+                            <option value="Vehicle">Vehicle</option>
+                        </select>
                          
                     </div>
                     
