--- a/backend/reactdjango/static/buyproperty.css
+++ b/backend/reactdjango/static/buyproperty.css
@@ -91,6 +91,7 @@ p{
 .property-container{
     background-color: white;
     width: 24%;
+    display: inline-block;
     border-top-left-radius: 5px; /* Adjust the radius value as needed */
     border-top-right-radius: 5px;
     margin-bottom: 5px;
