--- a/backend/reactdjango/static/header.css
+++ b/backend/reactdjango/static/header.css
@@ -11,6 +11,8 @@
     justify-content: space-around;
     align-items: center;
     position: fixed;
+    right: 0;
+    left: 0;
     top: 0;
     
 }
