--- a/backend/reactdjango/static/searchrental.css
+++ b/backend/reactdjango/static/searchrental.css
@@ -27,9 +27,9 @@ a{
 }
 
 .photo img{
-    max-width: 100%;
-    max-heisght: 100%;
-    object-fit: cover;
+    width: 100%;
+    max-heidght: 100%;
+    object-fjit: cover;
 }
 
 .details{
