--- a/backend/reactdjango/templates/search_property_on_sale.html
+++ b/backend/reactdjango/templates/search_property_on_sale.html
@@ -24,7 +24,7 @@
             </div>
             <div class="details">
                  <p><i class="fa fa-map-marker" aria-hidden="true"></i> {{property.location}}</p>
-                 <p>{{property.size}}</p>
+                 <p>{{property.property_type}}</p>
                  
             </div>
      
