--- a/backend/reactdjango/templates/buyproperty.html
+++ b/backend/reactdjango/templates/buyproperty.html
@@ -68,7 +68,8 @@
                      <img src="{{property.photos.url}}">
                 </div>
                 <div class="property-details">
-                     <p><i class="fa fa-map-marker" aria-hidden="true"></i> {{property.location}}</p>
+                     <p><i class="fa fa-map-marker" aria-hidden="true"></i> {{property.location}}uu</p>
+                     
                      <p>{{property.property_type}}</p>
                      
                 </div>
