--- a/backend/reactdjango/static/header.css
+++ b/backend/reactdjango/static/header.css
@@ -1,7 +1,8 @@
-*{
+body{
     padding: 0;
     margin: 0;
 }
+
 .nav-bar{
     background-color: rgb(7, 4, 19);
     width: 100%;
@@ -14,7 +15,7 @@
     right: 0;
     left: 0;
     top: 0;
-    
+    z-index: 1000;
 }
 .logo-header img{
     width: 18%;
@@ -88,5 +89,9 @@ footer{
     .buy-property{
         margin-right: 10px;
     }
+    .rent-property{
+        margin-right: 10px;
+    }
+    
 }
 
