--- a/backend/reactdjango/templates/header.html
+++ b/backend/reactdjango/templates/header.html
@@ -53,13 +53,13 @@
         <div class="company">
             <P style="font-weight: bold; padding-bottom: 15px; color: white; font-size: 18px;">Company</P>
             <a href="">About</a>
-            <a href="">Location</a>
+            <a href="https://maps.app.goo.gl/eKKyjDRfYyHFNHXJ8" target="_blank">Location</a>
             <a href="">Terms and Conditions</a>
         </div>
 
         <div class="support">
             <P style="font-weight: bold; padding-bottom: 15px; color: white; font-size: 18px;">Support</P>
-            <a href="">Contact</a>
+            <a href="" >Contact</a>
             <a href="">Email Us</a>
             <a href="">FAQS</a>
         </div>
