faq and scrool top btn

--- a/backend/reactdjango/templates/header.html
+++ b/backend/reactdjango/templates/header.html
@@ -44,24 +44,24 @@
          </div>
          <h3>J.L.C limited</h3>
         
-        <p> &copy; <script>document.write(new Date().getFullYear())</script> J.L.C  All rights reserved</p>
+        <p> &copy; <script>document.write(new Date().getFullYear())</script> J.L.C  <span>All rights reserved</p></span>
         
     </div>
 
     <div class="footer-container">
 
         <div class="company">
-            <P style="font-weight: bold; padding-bottom: 15px; color: white; font-size: 18px;">Company</P>
+            <P>Company</P>
             <a href="">About</a>
             <a href="https://maps.app.goo.gl/eKKyjDRfYyHFNHXJ8" target="_blank">Location</a>
             <a href="">Terms and Conditions</a>
         </div>
 
         <div class="support">
-            <P style="font-weight: bold; padding-bottom: 15px; color: white; font-size: 18px;">Support</P>
+            <P>Support</P>
             <a href="" >Contact</a>
             <a href="">Email Us</a>
-            <a href="">FAQS</a>
+            <a href="/faqs">FAQS</a>
         </div>
     </div>
 </footer>
