--- a/backend/reactdjango/templates/on_sale_property_details.html
+++ b/backend/reactdjango/templates/on_sale_property_details.html
@@ -66,14 +66,14 @@
         {% endif %}
         <div class="book">
             <div class="contact">
-                <a href="">
+                <a href="tel:{{on_sale_property.contact}}">
                     <div class="call-owner">
                         <p>Call Owner</p>
                        
                     </div>
                 </a>
     
-                <a href="">
+                <a href="https://wa.me/{{on_sale_property.contact}}" target="_blank" rel="noopener noreferrer">
                     <div class="whatsapp-owner">
                         <p>WhatsApp</p>
                     </div>
