--- a/backend/reactdjango/templates/rentaldetails.html
+++ b/backend/reactdjango/templates/rentaldetails.html
@@ -54,14 +54,14 @@
         {% endif %}
         <div class="book">
             <div class="contact">
-                <a href="">
+                <a href="tel:{{rental.landlord_contact}}">
                     <div class="call-landlord">
                         <p>Call landlord</p>
                        
                     </div>
                 </a>
     
-                <a href="">
+                <a href="https://wa.me/{{rental.landlord_contact}}" target="_blank" rel="noopener noreferrer">
                     <div class="whatsapp-landlord">
                         <p>WhatsApp</p>
                     </div>
