--- a/backend/reactdjango/templates/search_property_on_sale.html
+++ b/backend/reactdjango/templates/search_property_on_sale.html
@@ -16,7 +16,7 @@
 <div class="main-container">
     {% if properties %}
     {% for property in properties %}
-    <a href="">
+    <a href="view_property_on_sale_details/{{property.id}}">
         <div class="property-container">
         
             <div class="photo">
