--- a/backend/reactdjango/static/header.css
+++ b/backend/reactdjango/static/header.css
@@ -1,6 +1,7 @@
 body{
     padding: 0;
     margin: 0;
+    height: 100%;
 }
 
 .nav-bar{
@@ -19,6 +20,11 @@ body{
 }
 .logo-header img{
     width: 18%;
+}
+
+.btn{
+    display: flex;
+    justify-content: space-between;
 }
 .buy-property , .rent-property{
     background-color: rgb(4, 221, 40);
@@ -47,10 +53,9 @@ footer{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 40vh;
-   
     position: relative;
     bottom: 0;
+    height: 35vh;
 }
 .logo{
     margin-left: 20px;
@@ -79,6 +84,13 @@ footer{
     flex-direction: column;
     text-align: center;
 }
+.support p , .company p{
+    font-weight: bold;
+    padding-bottom: 15px;
+    color: white; 
+    font-size: 18px;
+}
+
 @media (max-width: 768px) {
     .phone-contact , .your-location{
         display: none;
@@ -92,6 +104,39 @@ footer{
     .rent-property{
         margin-right: 10px;
     }
-    
+    footer{
+        height: 20vh;
+    }
+    .logo{
+        margin-left: 5px;
+        color: white;
+        font-size: 12px;
+        width: 39%;
+    }
+    .logo-image img{
+        width: 15%;
+        
+    }
+    h3{
+        margin: 5px;
+        font-size: 12px;
+    }
+    span{
+        display: block;
+    }
+    .footer-container{
+        width: 61%;
+    }
+    .support p , .company p{
+        font-size: 14px;
+        padding-bottom: 6px;
+    }
+    .footer-container a{
+        padding: 5px;
+        font-size: 12px;
+    }
+    .support{
+        margin-right: 5px;
+    }
 }
 
