--- a/backend/reactdjango/templates/rentals.html
+++ b/backend/reactdjango/templates/rentals.html
@@ -95,6 +95,10 @@
         </a>
         
         {% endfor %}
+
+    <button onclick="scrollToTop()" id="scrollToTopBtn" title="Go to top"><i class="fa fa-arrow-up" aria-hidden="true"></i></button>
+
+    <script src="{% static 'home-btn.js'%}"></script>
     </div>
     {% endblock %}    
 </body>
